Bug 138960 - UI: The file could not be loaded! dialog appears when pressing enter in sidebar/navigatgor with a shape selected
Summary: UI: The file could not be loaded! dialog appears when pressing enter in sideb...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: implementationError
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2020-12-15 21:57 UTC by Telesto
Modified: 2021-08-11 05:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-12-15 21:57:07 UTC
Description:
UI: The file could not be loaded! dialog appears when pressing enter in sidebar/navigatgor with a shape selected

Steps to Reproduce:
1. Open Draw
2. Sidebar -> Navigator
3. Select page 1
4. Press Enter
5. Insert a shape
6. Select the shape in the sidebar/navigator
7. Press Enter

Actual Results:
The file could not be loaded! 

Expected Results:
Nothing?


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 15e4427e8fb56a143caa28b8a3120f3761fc77a5
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Roman Kuznetsov 2021-07-30 09:25:58 UTC
confirm in

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6805efdecb240fad8c82a5c1756a2a0e92f12b7d
CPU threads: 8; OS: Windows 10.0 Build 19043; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: threaded

in 7.1 no repro, but in 7.1 you can't select a shape using Navigator, I think it's an implementation error

Jim, what do you think?
Comment 2 Iskander 2021-07-30 17:29:52 UTC
Confirm in
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0d4cbdbc9cd4ab06056cec66cffd292b41615b6e
CPU threads: 2; OS: Windows 10.0 Build 17763; UI render: Skia/Raster; VCL: win
Locale: en-US (ru_RU); UI: en-US
Calc: threaded

and

Confirm in
Version: 7.1.4.2 (x64) / LibreOffice Community
Build ID: a529a4fab45b75fefc5b6226684193eb000654f6
CPU threads: 2; OS: Windows 10.0 Build 17763; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: ru-RU
Calc: threaded
Comment 3 Jim Raykowski 2021-08-07 04:57:32 UTC
I repro with gen vcl backend but not with gtk3.

Here is a link to one way to fix:
https://gerrit.libreoffice.org/c/core/+/120129
Comment 4 Commit Notification 2021-08-08 19:26:08 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/12dd1ce1dddc4ebad6be94ddec167cc7f6c45fe3

tdf#138960 Check if tree entry has children before attempting to expand

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2021-08-09 13:26:31 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/ef5bbe7a52baded54e8e6351431f2e04ef2b6828

tdf#138960 Check if tree entry has children before attempting to expand

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2021-08-11 05:23:53 UTC
It's ok now in
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: c97bdca2d7abf30a99c45192b8f49c5bf76ca035
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded