tdf#138960 Check if tree entry has children before attempting to expand

or collapse

Change-Id: Icbfc50dda35bb6027c12a42b5e8f79da165888e0